# hardware_repository

./: .gitignore  .tags  CMakeLists.txt  README.md
cad/central-pivot/: axle-holder-1.dxf  axle-holder-2.dxf  axle-mount-1.stl  axle-mount-2.step  baseplate.dxf  collar-mount.dxf  dowel-mount-lower.stl  dowel-mount-upper.stl  electronic-holder.dxf  lower-base.dxf  roof.dxf  upper-base.dxf
cad/lower-leg/: lower-leg.step
cad/misc/: centering-tool-2.stl
cad/static-hip/: static_hip_base_shell.step  transmission_pulley_at3_t30_center.step  transmission_pulley_at3_t30_output.step
cad/upper-leg/: transmission_belt_tensioner_roller.step  transmission_pulley_at3_t30_output.step  upper_leg_200mm_base.step
central-pivot/: axle-holder-1.dxf  axle-mount-1.step  axle-mount-2.stl  collar-1.step  collar-1.stl  collar-2.step  collar-2.stl  dowel-mount-lower.step  dowel-mount-upper.step  roof.dxf  ti-launchpad-holder.step  upper-base.dxf
docs/: basic_tests_leg.rst  bom.rst  build_instructions_leg.rst  build_instructions_pivot.rst  build_requirements.rst  index.rst  index2.rst  index3.rst  leg_pivot_integration.rst  monopod_firmware.rst  monopod_resources.rst
docs/design/: electrical_design.rst  hardware_design.rst  index.rst  monopod_design.rst
docs/firmware/: index.rst  monopod_firmware.rst
docs/physical/: basic_tests_leg.rst  build_instructions_pivot.rst  build_requirements.rst  index.rst  leg_pivot_integration.rst  leg_pivot_integration_testing.rst
lower-leg/: lower-leg.stl
misc/: centering-tool-1.stl
static-hip/: static_hip_cover_shell.step  transmission_belt_tensioner_roller.step  transmission_belt_tensioner_roller.stl  transmission_pulley_at3_t30_center.stl
upper-leg/: encoder_codewheel_kit_mount.stl  transmission_pulley_at3_t30_center.step  transmission_pulley_at3_t30_output.stl  upper_leg_200mm_cover.step
